--- a/style.css
+++ b/style.css
@@ -1,4 +1,14 @@
 .button {
-  background-color: blue;
+  display: block;
+  text-decoration: none;
+
+  color: #FFF;
+  background-color: #5995DA;
+  font-weight: bold;
+  padding: 20px;
   text-align: center;
+  border: 2px solid #5D6063;
+  border-radius: 5px;
+  width: 200px;
+  margin: 20px auto;
 }
